[gd_scene load_steps=2 format=1]

[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=1]

[node name="PauseMenu" type="PopupPanel"]

process/pause_mode = 2
editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 254.0
margin/bottom = 128.0
popup/exclusive = false
script/script = ExtResource( 1 )

[node name="FadeBlack" type="ColorFrame" parent="."]

visibility/opacity = 0.53
visibility/behind_parent = true
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -519.0
margin/top = -381.0
margin/right = -422.0
margin/bottom = -333.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 13.0
margin/right = 254.0
margin/bottom = 181.0
alignment = 0

[node name="Label" type="Label" parent="VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 254.0
margin/bottom = 14.0
text = "Game is Paused!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="VSeparator" type="VSeparator" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 18.0
margin/right = 254.0
margin/bottom = 22.0

[node name="Button" type="Button" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 26.0
margin/right = 254.0
margin/bottom = 46.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Label" type="Label" parent="VBoxContainer/Button"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 255.0
margin/bottom = 20.0
text = "Return to game"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="about_to_show" from="." to="." method="_on_PopupPanel_about_to_show"]

[connection signal="popup_hide" from="." to="." method="_on_PopupPanel_popup_hide"]

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Return_pressed"]


